--- a/atletaservice/pom.xml
+++ b/atletaservice/pom.xml
@@ -74,6 +74,19 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.4.12</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>david.augusto.luan</groupId>
+			<artifactId>cadastroservice</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
